@@ -10,6 +10,8 @@ import java.io.*;
 import java.net.Authenticator;
 import java.net.MalformedURLException;
 import java.net.PasswordAuthentication;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.channels.Channels;
 import java.nio.channels.ReadableByteChannel;
@@ -351,7 +353,7 @@ public class Dependencies {
         String proxyConfig = ConfigFile.get("settings", "proxy");
         if (proxyConfig != null && !proxyConfig.trim().equals("")) {
             try {
-                URL proxyUrl = new URL(proxyConfig);
+                URI proxyUrl = new URI(proxyConfig);
                 String userInfo = proxyUrl.getUserInfo();
                 if (userInfo != null) {
                     final String user = userInfo.split(":")[0];
@@ -366,7 +368,7 @@ public class Dependencies {
 
                 System.setProperty("https.proxyHost", proxyUrl.getHost());
                 System.setProperty("https.proxyPort", Integer.toString(proxyUrl.getPort()));
-            } catch (MalformedURLException e) {
+            } catch (URISyntaxException e) {
                 Wakatime.LOG.severe("Proxy string must follow https://user:pass@host:port format: " + proxyConfig);
             }
         }
